########### 2015-8-24 #################
alter table flashsale_productdetail add column material varchar(64) null;
alter table flashsale_productdetail add column color varchar(64) null;
alter table flashsale_productdetail add column wash_instructions varchar(128) null;
alter table flashsale_productdetail add column note varchar(64) null;
########### 2015-8-22 #################
alter table shop_items_product add ware_by int(11) NOT NULL;
alter table shop_items_product add index SH_IT_PR_SF_SU_ST_WB_IDX(sale_time,shelf_status,ware_by);
########### 2015-8-15 #################
ALTER TABLE flashsale_tongji_shopping ADD rebetamount INT(11) DEFAULT 0; 
########### 2015-8-13 #################
alter table flashsale_shoppingcart add column remain_time datetime DEFAULT NULL;
########### 2015-8-6 #################
alter table flashsale_productdetail add is_seckill boolean NOT NULL default False;
########### 2015-7-31 #################
ALTER TABLE shop_trades_mergetrade ADD INDEX IDX_TYPE (TYPE);
########### 2015-7-25 #################
alter table flashsale_productdetail add mama_rebeta int(11) NOT NULL;
########### 2015-7-18 #################
ALTER TABLE shop_refunds_product ADD reason INT(11) DEFAULT 0;
########### 2015-7-16 #################
alter table flashsale_productdetail add column is_recommend tinyint NOT NULL;
########### 2015-7-14 #################
alter table flashsale_productdetail add column mama_discount int(11) NOT NULL default 100;
alter table flashsale_trade add column discount_fee  double precision NOT NULL;
########### 2015-7-10 #################
alter table shop_items_product add column model_id bigint NOT NULL DEFAULT 0;
########### 2015-7-6 #################
alter table flashsale_daily_popularize_cost add column carrylog_red_packet double NOT NULL;

########### 2015-7-4 #################
alter table shop_items_itemnumtasklog add index SH_IT_IT_INDEX(outer_id,sku_outer_id);
ALTER TABLE shop_weixin_unionid ADD INDEX IDX_UNIONID_APP_KEY (UNIONID,APP_KEY);
