@@ -75,7 +75,7 @@ class OrderDetail(models.Model):
     id = BigIntegerAutoField(primary_key=True)
     
     orderlist = BigIntegerForeignKey(OrderList, related_name='order_list', verbose_name=u'订单编号')
-    product_id = models.CharField(max_length=32, verbose_name=u'商品id')
+    product_id = models.CharField(db_index=True,max_length=32, verbose_name=u'商品id')
     outer_id = models.CharField(max_length=32, verbose_name=u'产品外部编码')
     product_name = models.CharField(max_length=128, verbose_name=u'产品名称')
     chichu_id = models.CharField(max_length=32, verbose_name=u'规格id')
